--- a/src/app/report/sales.component.html
+++ b/src/app/report/sales.component.html
@@ -10,48 +10,77 @@
         </div>
     </p-toolbar>
 
-    <p-table [value]="items | priceFilter:priceValue:'movement':amountValue | articleFilter:articleValue | categoryFilter:categoryValue:'sales'" [totalRecords]="totalItems" [responsive]="true" #dt>
-        <p-footer>
-            <span style="float: left"><b>{{totalItems}}</b> {{ 'sales' | translate }}</span>
-            <span style="float: right">{{ 'Total' | translate }} <b>{{totalAmount | currencyFormat}}</b></span>
-            <p>&nbsp;</p>
-        </p-footer>
-        <p-column field="movementArticleProduct.brand.brandName" header="{{ 'Brand' | translate }}" [sortable]="true" [filter]="true" filterPlaceholder="{{ 'Search' | translate }}" filterMatchMode="contains"></p-column>     
-        <p-column header="{{ 'Categories' | translate }}" [sortable]="true" [filter]="true" [style]="{'overflow':'visible'}" >
-            <ng-template pTemplate="filter" let-col>
-               <input pInputText [(ngModel)]="categoryValue" placeholder="{{ 'Search' | translate }}" style="width: 100%;margin-top: 4px;" styleClass="ui-column-filter"/>
-            </ng-template>
-            <ng-template let-col let-data="rowData" pTemplate="body">
-                <li *ngFor="let item of data.movementArticleProduct.categories"> {{item.category.categoryName}} </li>
-            </ng-template>
-        </p-column>
-        <p-column header="{{ 'Product' | translate }}" [sortable]="true" [filter]="true">
-            <ng-template pTemplate="filter" let-col>
-                <input pInputText [(ngModel)]="articleValue" placeholder="{{ 'Search' | translate }}" style="width: 100%;margin-top: 4px;" styleClass="ui-column-filter"/>
-            </ng-template>
-            <ng-template let-col let-data="rowData" pTemplate="body">
-                {{data.movementArticleProduct | articleInfo:data.movementArticleBarcode}}
-            </ng-template>
-        </p-column>
-        <p-column field="movementArticleQuantity" header="{{ 'Quantity' | translate }}" [sortable]="true" [filter]="true" filterPlaceholder="{{ 'Search' | translate }}"></p-column>
-        <p-column field="movementArticlePrice" header="{{ 'Price' | translate }} ({{priceValue||''}})" [sortable]="true" [filter]="true" [style]="{'overflow':'visible'}">
-            <ng-template pTemplate="filter" let-col>
-                <i class="fa fa-close" (click)="priceValue=null;dt.filter(null,col.field,col.filterMatchMode)"></i>
-                <p-slider [style]="{'margin-top':'14px','margin-bottom':'5px'}" [(ngModel)]="priceValue" [min]="1" [max]="1000"></p-slider>
-            </ng-template>
-            <ng-template let-col let-data="rowData" pTemplate="body">
-                {{data.movementArticlePrice | currencyFormat}}
-            </ng-template>
-        </p-column>
-        <p-column field="movementArticleAmount" header="{{ 'Amount' | translate }} ({{amountValue||''}})" [editable]="false" [sortable]="true" [filter]="true" [style]="{'overflow':'visible'}">
-            <ng-template pTemplate="filter" let-col>
-                <i class="fa fa-close" (click)="amountValue=null;dt.filter(null,col.field,col.filterMatchMode)"></i>
-                <p-slider [style]="{'margin-top':'14px','margin-bottom':'5px'}" [(ngModel)]="amountValue" [min]="1" [max]="10000"></p-slider>
-            </ng-template>
-            <ng-template let-col let-data="rowData" pTemplate="body">
-                {{data.movementArticleAmount | currencyFormat}}
-            </ng-template>
-        </p-column>
-    </p-table>
+    <p-table [value]="items | priceFilter:priceValue:'movement':amountValue | articleFilter:articleValue | categoryFilter:categoryValue:'sales'" 
+        sortField="movementDevice" [totalRecords]="totalItems" [responsive]="true">
 
+        <ng-template pTemplate="header">
+            <tr>
+                <th [pSortableColumn]="'movementArticleProduct.brand.brandName'">
+                    {{ 'Brand' | translate }}
+                    <p-sortIcon [field]="'movementArticleProduct.brand.brandName'"></p-sortIcon>
+                </th>
+                <th [pSortableColumn]="'movementArticleProduct.categories'">
+                    {{ 'Categories' | translate }}
+                    <p-sortIcon [field]="'movementArticleProduct.categories'"></p-sortIcon>
+                </th>
+                <th [pSortableColumn]="'movementArticleProduct'">
+                    {{ 'Product' | translate }}
+                    <p-sortIcon [field]="'movementArticleProduct'"></p-sortIcon>
+                </th>
+                <th [pSortableColumn]="'movementArticleQuantity'">
+                    {{ 'Quantity' | translate }}
+                    <p-sortIcon [field]="'movementArticleQuantity'"></p-sortIcon>
+                </th>
+                <th [pSortableColumn]="'movementArticlePrice'">
+                    {{ 'Price' | translate }} ({{priceValue||''}})
+                    <p-sortIcon [field]="'movementArticlePrice'"></p-sortIcon>
+                </th>
+                <th [pSortableColumn]="'movementArticleAmount'">
+                    {{ 'Amount' | translate }} ({{amountValue||''}})
+                    <p-sortIcon [field]="'movementArticleAmount'"></p-sortIcon>
+                </th>
+            </tr>
+            <tr>
+                <th>
+                    <input pInputText type="text" placeholder="{{ 'Search' | translate }}" (input)="dt.filter($event.target.value, 'movementArticleProduct.brand.brandName', 'contains')">
+                </th>
+                <th>
+                    <input pInputText [(ngModel)]="categoryValue" placeholder="{{ 'Search' | translate }}" style="width: 100%;margin-top: 4px;" styleClass="ui-column-filter"/>
+                </th>
+                <th>
+                    <input pInputText [(ngModel)]="articleValue" placeholder="{{ 'Search' | translate }}" style="width: 100%;margin-top: 4px;" styleClass="ui-column-filter"/>
+                </th>
+                <th>
+                    <input pInputText type="text" placeholder="{{ 'Search' | translate }}" (input)="dt.filter($event.target.value, 'movementArticleQuantity', 'contains')">
+                </th>
+                <th>
+                    <i class="fa fa-close" (click)="priceValue=null;dt.filter(null,'movementArticlePrice','contains')"></i>
+                    <p-slider [style]="{'margin-top':'14px','margin-bottom':'5px'}" [(ngModel)]="priceValue" [min]="1" [max]="1000"></p-slider>
+                </th>
+                <th>
+                    <i class="fa fa-close" (click)="amountValue=null;dt.filter(null,'movementArticleAmount','contains')"></i>
+                    <p-slider [style]="{'margin-top':'14px','margin-bottom':'5px'}" [(ngModel)]="amountValue" [min]="1" [max]="10000"></p-slider>
+                </th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-row let-rowIndex="rowIndex">
+            <tr [pSelectableRow]="row">
+                <td>{{ row.movementArticleProduct.brand.brandName }}</td>
+                <td><li *ngFor="let item of row.movementArticleProduct.categories"> {{item.category.categoryName}} </li></td>
+                <td>{{ row.movementArticleProduct | articleInfo:row.movementArticleBarcode }}</td>
+                <td>{{ movementArticleQuantity }}</td>
+                <td>{{ row.movementArticlePrice | currencyFormat }}</td>
+                <td>{{ row.movementArticleAmount | currencyFormat }}</td>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="footer" let-row>
+            <tr>
+                <td colspan="6">
+                    <span style="float: left"><b>{{totalItems}}</b> {{ 'sales' | translate }}</span>
+                    <span style="float: right">{{ 'Total' | translate }} <b>{{totalAmount | currencyFormat}}</b></span>
+                </td>
+            </tr>
+        </ng-template>
+        
+    </p-table>
 </div>
