--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -2,24 +2,33 @@
 
 <div class="container-fluid">
 
-    <p-toolbar>
-        <div class="ui-toolbar-group-left">
-            <button pButton type="button" title="{{ 'Add' | translate }}" label="{{totalRecords}}" (click)="addClick()" class="ui-button-primary" icon="pi pi-plus"></button>
-        </div>
-        <div class="ui-toolbar-group-right">
-            <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
-            <input #gb type="text" pInputText placeholder="{{ 'Search' | translate }}">
-        </div>
-    </p-toolbar>
+    <p-table #dt *ngIf="!displayPanel" [columns]="cols" [responsive]="true" [value]="stores"
+        selectionMode="single" [(selection)]="selected" sortMode="single" (onRowSelect)="onRowSelect($event)"
+        [paginator]="true" [rows]="15" [totalRecords]="totalRecords" [pageLinks]="5">
 
-    <p-table *ngIf="!displayPanel" [responsive]="true" [value]="stores"
-        selectionMode="single" [(selection)]="selected" (onRowSelect)="onRowSelect($event)"
-        [paginator]="true" [rows]="15" [totalRecords]="totalRecords" [pageLinks]="5"
-        [globalFilter]="gb" #dt>
-        <p-column field="storeId" header="Id" [style]="{'width':'100px'}" [sortable]="true"></p-column>
-        <p-column field="storeName" header="{{ 'Name' | translate }}" [sortable]="true"></p-column>
-        <p-column field="storeCity" header="{{ 'City' | translate }}" [sortable]="true"></p-column>
-        <p-column field="storeCountry" header="{{ 'Country' | translate }}" [sortable]="true"></p-column>
+        <ng-template pTemplate="caption">
+            <div style="text-align: left">        
+                <button pButton type="button" title="{{ 'Add' | translate }}" label="{{totalRecords}}" (click)="addClick()" class="ui-button-primary" icon="pi pi-plus"></button>
+                <input type="text" pInputText placeholder="Global Filter" (input)="dt.filterGlobal($event.target.value, 'contains')" style="width:auto; float: right;">
+                <i class="fa fa-search" style="margin:4px 4px 0 0; float: right;"></i>
+            </div>
+        </ng-template>
+        <ng-template pTemplate="header" let-columns>
+            <tr>
+                <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+                    {{col.header | translate}}
+                    <p-sortIcon [field]="col.field"></p-sortIcon>
+                </th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-row let-columns="columns">
+            <tr [pSelectableRow]="row">
+                <td *ngFor="let col of columns">
+                    {{row[col.field]}}
+                </td>
+            </tr>
+        </ng-template>
+
     </p-table>
 
     <p-panel *ngIf="displayPanel">
